Bug fixes. When a hint is visible for a piece it won't recalculate if the hints for that piece were already visible. When a hint is visible and you click outside the hint squares it will hide the hints again. Changed the width for captureHints and hover borders. TODO add game logic -> which turn it is, add castling, maybe add a hint element instead of toggling a div.

--- a/src/styles.css
+++ b/src/styles.css
@@ -44,6 +44,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: var(--background-color);
+    z-index: 5;
 }
 
 /*Board*/
@@ -87,7 +88,7 @@ chess-square {
     height: 100%;
     width: 100%;
     position: relative;
-    padding: .4vw;
+    padding: calc(.5vmin);
     background-clip: content-box, padding-box;
 }
 
@@ -120,7 +121,7 @@ chess-square p.columnNumbers {
 }
 
 /*Hints*/
-chess-square .hint, .capture-hint {
+chess-square div.hint, div.capture-hint {
     position: absolute;
     border-radius: 50%;
     z-index: 2;
@@ -135,7 +136,7 @@ chess-square div.hint {
 chess-square div.capture-hint {
     width: 100%;
     height: 100%;
-    border: calc(1.5vmin) solid var(--square-hint-color);
+    border: calc(1vmin) solid var(--square-hint-color);
     background-color: transparent;
     cursor: grab;
 }
